--- a/bower.json
+++ b/bower.json
@@ -7,17 +7,19 @@
     "angular-resource": "~1.4.2",
     "angular-route": "~1.4.2",
     "angular-bootstrap": "~0.13.4",
+    "angular-input-masks": "~2.1.0",
     "malarkey": "yuanqing/malarkey#~1.3.1",
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
-    "angular": "~1.4.2"
+    "angular": "~1.4.2",
+    "angular-input-masks": "~2.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
   },
   "resolutions": {
     "jquery": "~2.1.4",
-    "angular": "~1.4.2"
+    "angular": "~1.3.16"
   }
 }
