--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,8 @@
     "angular-route": "~1.4.2",
     "angular-bootstrap": "~0.13.4",
     "angular-input-masks": "~2.1.0",
+    "d3": "~3.5.9",
+    "nvd3": "~1.8.1",
     "malarkey": "yuanqing/malarkey#~1.3.1",
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
