--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
     "angular": "~1.4.2",
-    "angular-input-masks": "~2.1.0"
+    "angular-nvd3": "~1.0.3",
+    "angularjs-nvd3-directives": "~0.0.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
